# VULKAN_LEARNING_ENGINE

./: .gitignore  CMakeLists.txt  LibraryBuilder.cmake  README.md  TEMP_ERROR_LOG.txt  current_notes.txt  different_buffer_types.txt  sauoihg
NOTES/: Indirect_command_buffer_notes.txt  Sparse_buffer_notes.txt  culling_notes.txt  super_test.txt
assets/shaders/: buffer.fs  buffer.vs  defaultHead.gh  lamp.fs  object.fs  object.vs  outline.fs  outline.vs  text.fs  text.vs
assets/shaders/instanced/: instanced.vs
assets/skybox/: sky.fs  skybox.fs  skybox.vs
include/glad/: glad.h  vulkan.h
include/glm/gtx/: rotate_vector.hpp  transform.hpp
src/: glad.c  lve_pipeline.hpp  main.cpp  scene.cpp  scene.h  scene.hpp
src/algorithms/: avl.cpp  avl.hpp  bounds.cpp  bounds.h  bounds.hpp  list.hpp  octree.cpp  octree.h  ray.cpp  ray.hpp
src/algorithms/math/: linalg.cpp
src/graphics/: TEXTURE_CODE.hpp  entities_static.hpp  entity.cpp  entity.hpp  entity_dynamic_resizeable.hpp  game_object.cpp  game_object.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader_pipeline.cpp  shader_pipeline.hpp  simple_render_system.cpp  simple_render_system.hpp  texture.cpp  texture.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_descriptors.cpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_frame_info.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_model.cpp  vulkan_model.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_renderer.cpp  vulkan_swap_chain.cpp  vulkan_swap_chain.hpp  vulkan_utils.hpp  vulkan_window.hpp
src/graphics/BACKUP/: texture.cpp  texture.hpp
src/graphics/memory/: framememory.hpp
src/graphics/models/: box.hpp  cube.hpp  gun.hpp  lamp.hpp  sphere.hpp
src/graphics/objects/: model.cpp  model.h
src/graphics/rendering/: cubemap.cpp  cubemap.hpp  light.cpp  light.hpp  material.cpp  shader.cpp  shader.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp
src/io/: camera.cpp  camera.h  camera.hpp  joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  keyboard.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  mouse.cpp  mouse.h  mouse.hpp  movement_controller.cpp  movement_controller.hpp  vulkan_camera.cpp
src/physics/: collisionmesh.cpp  collisionmesh.hpp  collisionmodel.cpp  collisionmodel.hpp  environment.cpp  rigidbody.cpp  rigidbody.hpp
src/vulkan_core/: simple_render_system.hpp  vulkan_descriptors.cpp  vulkan_descriptors.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_model.cpp  vulkan_model.hpp  vulkan_pipeline.cpp  vulkan_renderer.hpp  vulkan_swap_chain.cpp  vulkan_swap_chain.hpp  vulkan_utils.hpp  vulkan_window.cpp  vulkan_window.hpp
